# davey

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  package.json
.github/workflows/: format.yml  node-ci.yml  node-publish.yml  python-code-checks.yml  python-release.yml  python-test.yml
davey/: Cargo.toml
davey-node/: .npmignore  CHANGELOG.md  Cargo.toml  davey.wasi-browser.js  davey.wasi.cjs  index.d.ts  index.js  package.json  pnpm-lock.yaml
davey-node/benchmark/: bench.ts
davey-node/src/: displayable_code.rs  fingerprint.rs  lib.rs  session.rs  signing_key_pair.rs
davey-node/test/: session.test.ts
davey-python/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
davey-python/src/: session.rs  signing_key_pair.rs
davey/src/: aes_gcm.rs  session.rs  signing_key_pair.rs
davey/src/cryptor/: aead_cipher.rs  codec_utils.rs  decryptor.rs  encryptor.rs  frame_processors.rs  hash_ratchet.rs  mlspp_crypto.rs  mod.rs
docs/: USAGE.md
src/: session.rs
