[package]
name = "davey"
version = "0.1.3"
description = "A Rust implementation of Discord Audio & Video End-to-End Encryption (DAVE) Protocol"
license = "MIT"
homepage = "https://github.com/Snazzah/davey"
repository = "https://github.com/Snazzah/davey"
authors = ["Snazzah <me@snazzah.com>"]
keywords = ["MLS", "Encryption", "E2EE", "Discord", "DAVE"]
edition = "2024"

[dependencies]
openmls = { features = ["js"], version = "0.8.1" }
openmls_basic_credential = "0.5.0"
openmls_rust_crypto = "0.5.1"
tracing = "0.1.41"
thiserror = "2.0.12"
# Crypto utils
p256 = { version = "0.13" }
rand = "0.8"
digest = { version = "0.11.2", features = ["zeroize"] }
sha2 = { version = "0.11", features = ["zeroize"] }
hmac = { version = "0.13.0-rc.6", features = ["zeroize"] }
scrypt = { version = "0.11.0", default-features = false }
zeroize = { version = "1.8.2", features = ["derive"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
# aes-gcm
aead = { version = "0.5", default-features = false }
aes = { version = "0.8", features = ["zeroize"] }
cipher = { version = "0.4", features = ["zeroize"] }
ctr = { version = "0.9", features = ["zeroize"] }
ghash = { version = "0.5", default-features = false, features = ["zeroize"] }
subtle = { version = "2", default-features = false }
hex-literal = { version = "0.3" }
# NAPI
napi-derive = { version = "3", optional = true }
napi = { version = "3", optional = true }
# PyO3
pyo3 = { version = "0.25.0", optional = true }

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
pyo3 = ["dep:pyo3"]
